--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,43 @@
-h1 {
-  font-family: "Playfair Display", serif;
-  text-align: center;
+:root {
+  --primary-color: #6c63ff;
+  --background-color: #f9f7fe;
+  --brand-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
 }
 
-h3 {
-  font-family: "Poppins", sans-serif;
+h1 {
+  font-family: var(--brand-font-family);
+  font-weight: bold;
+  font-size: 96px;
+  color: black;
+}
+p {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+}
+.hero {
+  background: var(--background-color);
+  padding: 160px 20px;
   text-align: center;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.hero h2 {
+  font-family: var(--default-font-family);
+  font-weight: normal;
+  font-size: 24px;
+  color: #272142;
+  line-height: 2;
+}
+.btn-branding {
+  background: var(--primary-color);
+  padding: 18px 30px;
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
 }
