--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,9 @@ h1 {
   font-size: 96px;
   color: black;
 }
+h2 {
+  font-size: 64px;
+}
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
@@ -40,4 +43,36 @@ p {
   color: white;
   font-size: 18px;
   line-height: 27px;
+}
+.btn-branding-outline {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+.project-desciption {
+  padding: 100px 50px;
+}
+
+@media (max-width: 900px) {
+  h1 {
+    font-size: 44px;
+    line-height: 2;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
+
+  .project-desciption {
+    padding: 0;
+    text-align: center;
+  }
 }
