--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,29 @@ p {
   padding: 100px 50px;
 }
 
+.about-section {
+  padding: 160px 20px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+  font-weight: bold;
+  font-family: var(--default-font-family);
+}
+.about-section-content {
+  margin: 30px;
+}
+.about-section p {
+  font-size: 16px;
+}
+.about-section img {
+  width: 400px;
+  border-radius: 50%;
+}
+
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -69,6 +92,10 @@ p {
 
   .hero {
     padding: 80px 20px;
+  }
+  .about-section {
+    text-align: center;
+    padding: 0;
   }
 
   .project-desciption {
