--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,41 @@ h1 {
 h2 {
   font-size: 64px;
 }
+h4 {
+  font-size: 48px;
+}
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
+}
+footer .contact-box {
+  background: var(--background-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+footer .contact-box p {
+  margin: 0;
+}
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .email-link:hover {
+  color: var(--primary-color);
+}
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--primary-color);
+  background: var(--background-color);
+  padding: 10px 14px;
+  border-radius: 50%;
+  font-size: 18px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--primary-color);
 }
 .content-container {
   padding: 160px 20px;
@@ -118,6 +150,9 @@ p {
     font-size: 44px;
   }
 
+  h4 {
+    font-size: 26px;
+  }
   .hero {
     padding: 80px 20px;
   }
